[tool.poetry]
name = "less11"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Gennadiy Shpak <gena_shpak@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = {extras = ["standart"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.7.0"}
asyncpg = "^0.29.0"
validate-email = "^1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
